# wtfs

./: .clang-format  .gitignore  CMakeLists.txt  build-command  build.sh  common.hpp  esej.txt  format  gdb.sh  main.cpp  ops.cpp  ops.hpp  structure.cpp  structure.hpp  tests.cpp  tests.hpp  val.sh  vals.sh
proto/: mmap  mmap.cpp  open  open.cpp  size  size.cpp  xor_links.cpp
